# ModeloWebAppMongooseSociFramework

./: CMakeLists.txt
WebContent/: template.html
WebContent/css/: style.css
WebContent/usuario/: add.html  edit.html  list.html  novo.html  show.html
doc/: modeloapp.mwb
src/: main.cpp  util.hpp
src/control/: controlador.cpp  controlador.h  usuariocontrolador.cpp  usuariocontrolador.h
src/entity/: usuario.cpp  usuario.h
src/model/: model.cpp  model.h
src/repository/: repository.cpp  repository.h  usuariorepository.cpp  usuariorepository.h
